--- a/src/components/intro/intro.styles.scss
+++ b/src/components/intro/intro.styles.scss
@@ -33,6 +33,7 @@
 
     @include responsive(tab-land) {
       width: 80%;
+      padding: 7% 4%;
     }
     @include responsive(phone) {
       padding: 7% 0;
@@ -54,7 +55,7 @@
       margin: 0;
     }
     @include responsive(phone) {
-      font-size: 2rem;
+      font-size: 3rem;
       margin: 0 0 1% 0;
     }
   }
@@ -73,7 +74,7 @@
       margin: 0;
     }
     @include responsive(phone) {
-      font-size: 1.7rem;
+      font-size: 2.5rem;
       margin: 0;
     }
   }
@@ -98,10 +99,10 @@
         margin-left: 5%;
       }
       @include responsive(phone) {
-        width: 30rem;
+        width: 35rem;
       }
       @include responsive(phone-land) {
-        width: 30rem;
+        width: 35rem;
       }
     }
   }
