--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -44,8 +44,9 @@
 .icon {
   width: 3rem;
   border-radius: 0.5rem;
-
   border: 1px solid white;
+  border: none;
+  margin: 0;
   padding: 0;
   background-color: transparent;
   background-image: linear-gradient(120deg, white 0%, white 50%, $accent3 50%);
