--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -5,4 +5,11 @@
   min-height: calc(100vh - 60px);
   height: 100%;
   background-color: $background1;
+
+  .resume {
+    font-size: 3rem;
+    width: 60%;
+    opacity: 1;
+    color: $accent3;
+  }
 }
